Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19109

Balloon tooltips are not the correct shape

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      In ReactOS 0.4.15 rev 8532f18, the balloon style tooltip is the wrong shape. The shape should be a callout shape. Instead, it appears to be two separate shapes, an arrow pointing to the target and a rounded rectangle.

      ReactOS 0.4.15 rev 8532f18 ❌:

      Windows Server 2003 SP2 ✅:

      Attachments

        Issue Links

          Activity

            People

              anonanon cbialorucki
              anonanon cbialorucki
              Votes:
              3 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: